# pane

./: .gitignore  demo.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
demo/: DEMO-SCRIPT.md  api-design.md  auth-spec.md
src/: editor.ts  filetree.ts  layout.ts  main.ts  quickopen.ts  styles.css  tabs.ts  terminal.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: AppIcon.icns  Assets.car
src-tauri/icons/: icon.icns
src-tauri/icons/AppIcon.xcassets/AppIcon.appiconset/: Contents.json
src-tauri/src/: fs_ops.rs  lib.rs  main.rs  pty.rs  settings.rs  socket.rs  watcher.rs
src/editor/: highlight.ts  mermaid.ts  placeholder.ts  plugins.ts  slash.ts  toolbar.ts  view.ts
