[package]
name = "minmark"
version = "0.1.0"
edition = "2021"
default-run = "minmark"

[lib]
name = "minmark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "minmark"
path = "src/main.rs"

[[bin]]
name = "mm"
path = "src/bin/minmark_cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
notify = "8"
notify-debouncer-full = "0.5"
